# ReceiptScanner

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .coveragerc  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Makefile  QUERY_COUNT_VERIFICATION.md  README.md  docker-compose.yml  logging.ini  pyproject.toml  pytest.ini  requirements.txt  test_manual_query_verification.py
.github/workflows/: pre_commit_hooks.yaml  tests.yml
app/: exceptions.py  main.py  models.py
app/api/: deps.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: categories.py  receipts.py
app/category/: deps.py  models.py  router.py  services.py
app/core/: config.py  db.py  decorators.py  deps.py  error_handlers.py  exceptions.py  handlers.py
app/crud/: category.py  receipt.py
app/db/: session.py
app/domains/category/: router.py  services.py
app/domains/receipt/: deps.py  router.py  services.py
app/features/category/: deps.py  models.py  repositories.py  router.py  service.py  services.py
app/features/receipt/: deps.py  models.py  repositories.py  router.py  service.py  services.py
app/integrations/gemini/: prompts.py  receipt_analyzer.py  schemas.py
app/integrations/image_processing/: image_processor.py  scanner.py
app/integrations/pydantic_ai/: receipt_agent.py  receipt_schema.py
app/integrations/scanner/: receipt_scanner.py
app/middlewares/: error_handler.py
app/models/: __init__.py  category.py  receipt.py  receipt_analysis.py
app/receipt/: deps.py  models.py  router.py  services.py
app/repositories/: __init__.py  category.py  category_repository.py  receipt.py  receipt_repository.py
app/schemas/: __init__.py  category.py  receipt.py
app/services/: __init__.py  category.py  receipt.py  receipt_scanner.py  receipt_scanner_service.py  receipt_service.py  scanner_service.py
app/templates/: prompts.py
backend/: .env.example  .env.test  Dockerfile  Makefile  pyproject.toml  test_query_count.py  test_verification.py
backend/app/: __init__.py  main.py  models.py
backend/app/analytics/: __init__.py  deps.py  models.py  router.py  services.py
backend/app/auth/: deps.py  models.py  router.py  services.py  utils.py
backend/app/category/: deps.py  models.py  router.py  services.py
backend/app/core/: config.py  deps.py  error_handlers.py
backend/app/integrations/pydantic_ai/: receipt_agent.py  receipt_prompt.py  receipt_reconcile_agent.py  receipt_reconcile_prompt.py  receipt_reconcile_schema.py  receipt_schema.py
backend/app/receipt/: deps.py  exporters.py  models.py  pdf_generator.py  router.py  services.py
backend/migrations/: env.py
backend/migrations/versions/: 7c7043fdd241_initial_schema_with_user_authentication.py  8af1e70d0a0f_initial_database_setup.py  a1b2c3d4e5f6_add_user_table.py  b2c3d4e5f6g7_add_user_id_to_models.py  cd15e3c2931a_add_receipt_metadata.py
backend/tests/integration/: conftest.py
backend/tests/integration/analytics/: test_analytics_endpoints.py
backend/tests/integration/auth/: test_auth_endpoints.py
backend/tests/integration/category/: test_category_endpoints.py
backend/tests/integration/receipt/: test_receipt_endpoints.py  test_scan_endpoint.py
backend/tests/unit/analytics/: test_analytics_service.py
backend/tests/unit/auth/: test_auth_service.py  test_utils.py
backend/tests/unit/category/: test_category_service.py
backend/tests/unit/core/: test_exceptions.py
backend/tests/unit/integrations/pydantic_ai/: test_receipt_schema.py
backend/tests/unit/receipt/: test_csv_export.py  test_pdf_generator.py  test_receipt_service.py
frontend/: .dockerignore  Dockerfile  README.md  VISUAL_REGRESSION_TEST_RESULTS.md  package-lock.json  package.json  pnpm-lock.yaml  verify_pdf_export.sh
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: page.tsx
frontend/src/app/(app)/analytics/: page.tsx
frontend/src/app/(app)/categories/: page.tsx
frontend/src/app/(app)/receipts/: page.tsx
frontend/src/app/(app)/receipts/[id]/: page.tsx
frontend/src/app/(app)/scan/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/api/receipts/[id]/image/: route.ts
frontend/src/components/analytics/: category-breakdown-list.tsx  category-items-modal.tsx  currency-selector.tsx  date-navigator.tsx  index.ts  spending-trends-chart.tsx  stat-card.tsx  top-stores-list.tsx
frontend/src/components/auth/: auth-error-handler.tsx  login-form.tsx  register-form.tsx
frontend/src/components/dashboard/: spending-chart.tsx
frontend/src/components/layout/: app-shell.tsx  header.tsx  mobile-nav.tsx  sidebar.tsx
frontend/src/components/receipts/: add-item-dialog.tsx  filter-bar.tsx  metadata-form.tsx
frontend/src/components/scan/: dropzone.tsx  index.ts  scan-result.tsx
frontend/src/hooks/: index.ts  use-analytics.ts  use-auth.ts  use-categories.ts  use-currency.ts  use-receipts.ts
frontend/src/lib/: constants.ts  format.ts  providers.tsx  store.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/auth/: context.tsx  index.tsx  provider.tsx
frontend/src/types/: index.ts
scripts/: db.sh  start-dev.sh  test.sh  test_endpoints.sh
tests/: conftest.py
tests/integration/category/: test_category_endpoints.py
tests/integration/receipt/: test_receipt_endpoints.py
tests/unit/: test_main.py
tests/unit/category/: test_category_service.py
tests/unit/category/mocks/: mock_repository.py
tests/unit/core/: test_config.py
tests/unit/receipt/: test_receipt_service.py
tests/unit/receipt/mocks/: mock_repository.py
